<resources>
    <string name="app_name">5C Kitchen App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="addSupplyButton">Add Supply</string>
    <string name="deleteButton">Delete</string>

    <string name="supplyInput">Enter Supply</string>

    <string name="search"><b>Add Supply Item</b></string>
    <string name="enter_item">Add Item</string>

    <string name="createButton">Create</string>
    <string name="cancelButton">Cancel</string>

    <string name="addKitchenName">Kitchen Name</string>
    <string name="addKitchenCampus">Campus</string>
    <string name="addKitchenCampusHint">What campus is the kitchen on?</string>
    <string name="addKitchenAccessibility">Accessability</string>
    <string name="addKitchenAccessibilityHint">When and to whom is the kitchen accessible</string>

    <string name="activity_details">Supply Details</string>

    <string name="addSupplyIntro">Create a New Supply</string>
    <string name="addKitchenIntro">Create a New Kitchen</string>

    <string name="selectEquipment">Equipment</string>
    <string name="selectIngredient">Ingredient</string>

    <string name="addKitchenButton">Add Kitchen</string>

    <string name="ingredientList"><b>Ingredients</b></string>
    <string name="equipmentList"><b>Equipment</b></string>

    <string name="Pomona"><b>Pomona College</b></string>
    <string name="CMC"><b>Claremont Mckenna College</b></string>
    <string name="Scripps"><b>Scripps College</b></string>
    <string name="Mudd"><b>Harvey Mudd College</b></string>
    <string name="Pitzer"><b>Pitzer College</b></string>

    <string-array name="campus_array">
        <item>Pomona</item>
        <item>Harvey Mudd</item>
    </string-array>

    <string-array name="harveymudd_kitchen_array">
        <item>Case</item>
        <item>Drinkward</item>
        <item>Linde</item>
        <item>Sontag</item>
        <item>South</item>
    </string-array>

    <string-array name="pomona_kitchen_array">
        <item>Harwood</item>
        <item>Lyon</item>
        <item>Oldenborg</item>
        <item>Sontag</item>
        <item>Wig</item>
    </string-array>

    <string name="app_label">5C Kitchen App</string>
    <string name="search_label">Item Search</string>
    <string name="search_item">Search</string>



</resources>
