<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/addKitchenIntro"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/edit_kitchen_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/addKitchenName"
        android:textSize="22sp"
        android:inputType="textCapSentences"/>

    <TextView
        android:id="@+id/campus_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/addKitchenCampus"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/edit_kitchen_campus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/addKitchenCampusHint"
        android:textSize="22sp"
        android:inputType="textCapSentences"/>

    <TextView
        android:id="@+id/accessibility_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/addKitchenAccessibility"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/edit_kitchen_accessibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/addKitchenAccessibilityHint"
        android:textSize="22sp"
        android:inputType="textCapSentences"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/cancelButton"
            android:textStyle="bold"
            android:onClick="cancelSupply"
            android:background="#BBDEFB"/>

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createButton"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:onClick="createSupply"
            android:background="#2196F3"/>

    </LinearLayout>


</LinearLayout>