<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/addSupplyIntro"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/edit_supply_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="Supply Name"
        android:textSize="22sp"
        android:inputType="textCapSentences"/>

    <EditText
        android:id="@+id/edit_kitchen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="Kitchen"
        android:textSize="22sp"
        android:inputType="textCapSentences"/>

    <EditText
        android:id="@+id/edit_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="Extra Notes"
        android:textSize="22sp"
        android:inputType="textCapSentences"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/select_equipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectEquipment"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/select_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectIngredient"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <EditText
        android:id="@+id/edit_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="Quantity of Ingredient"
        android:textSize="22sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/cancelButton"
            android:textStyle="bold"
            android:onClick="cancelSupply"
            android:background="#BBDEFB"/>

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createButton"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:onClick="createSupply"
            android:background="#2196F3"/>

    </LinearLayout>




</LinearLayout>