<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--<TextView
        android:id="@+id/main_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="Welcome to the ASPC Kitchen Application!"/>-->
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center_horizontal">
        <!-- Displays keyboard when touched -->
        <!--<EditText android:id="@+id/main_edittext"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_item"
            android:layout_weight="0.7" />-->
        <Button
            android:id="@+id/main_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#2196F3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_item"
            android:onClick="addKitchenSupply"
            android:textSize="18sp"
            android:textColor="#ffffff"/>
    </LinearLayout>

    <!-- List whose dataset is defined in code with an adapter -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/ingredientList"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textStyle=""/>

    <ListView
        android:id="@+id/ingredient_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.53"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/equipmentList"
        android:textSize="30sp"
        android:textColor="#000000"/>

    <ListView
        android:id="@+id/equipment_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.53"/>

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="Refresh"
        android:onClick="refreshList"/>

</LinearLayout>